test/attribute/fail/more_than_one_argument.rs
#[proc::attribute]
fn test(_first: (), _second: ()) -> proc::TokenStream {
    todo!()
}

fn main() {}
