test/attribute/fail/more_than_one_argument.stderr
error: The attribute function should have one argument
 --> test/attribute/fail/more_than_one_argument.rs:2:1
  |
2 | fn test(_first: (), _second: ()) -> proc::TokenStream {
  | ^^
